# spike-detector-femtonics

./: .gitignore  AGENTS.md  README.md  detection_params.json  launch_image_processor.bat  main.py  requirements.txt
app/: detection.py  gui_main.py  hybrid_denoising.py  io.py  models.py  plot_widget.py  session_io.py
detector/: __init__.py
detector/analysis/: README.md  __init__.py  (+2 more)
docs/: IMAGE_PROCESSOR_MOTION_SEGMENTATION_PLAN.md  MAINTENANCE.md  PROJECT_STRUCTURE.md  README.md  VOLPY_PIPELINE_REVIEW_MEMORY.md
image_processor/: __init__.py  __main__.py  app.py  comparison_signal_export.py  export_average_png.py  export_signals.py  mask_signal_export.py  motion_correction.py  native_pipeline.py  pipeline_hooks.py  pixel_motion_qc.py  qc_images.py  requirements.txt  roi_core.py  segmentation_hooks.py  signal_export.py  split_multi_roi_tiff.py  summary_images.py  tiff_backend.py  tracked_segmentation.py  validate_hooks.py
image_processor/native_viewer/: CMakeLists.txt  README.md
image_processor/native_viewer/src/: FrameCache.cpp  FrameCache.h  MainWindow.cpp  MainWindow.h  NativeMetadata.cpp  NativeMetadata.h  TiffStack.cpp  TiffStack.h  TiffViewerWidget.cpp  TiffViewerWidget.h  main.cpp
tests/: test_analysis_package_exporter.py  test_gonzalez_denoising.py  test_io.py  test_lazy_trace_loading.py  test_pipeline_config.py  test_plateau_signal_classification.py  test_qc_summary.py  test_render_normalization.py  test_session_io.py  test_short_plateau_detector.py  test_state_guided_denoising.py  test_template_matching_detection.py
tools/: native_dev_env.bat  native_dev_shell.bat
(+31 files in other folders)
